# CaatingaID

./: .gitignore  README.md  banco_plantas.json  pyproject.toml
src/caatingaid/: main.py
src/caatingaid/classes/: angiosperma.py  briofita.py  gimnosperma.py  planta.py  pteridofita.py
src/caatingaid/crud/: crud.py
src/caatingaid/services/: gemini_api.py
